--- a/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
@@ -63,7 +63,13 @@
                     </div>
                 </div>
 
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--first-col"></div>
+                </div>
+
             </div>
+
+
 
             <div class="section bg bg--light">
 
@@ -96,12 +102,19 @@
                     Carousel module
                 </div>
 
+                <div class="section__notch section__notch">
+                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                </div>
+
             </div>
 
 
             <div class="section bg bg--dark">
                 <div class="section__container">
                     News
+                </div>
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--third-col"></div>
                 </div>
             </div>
 
