--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -33,6 +33,13 @@
         margin-top: 4px;
         margin-left: auto;
         cursor: pointer;
+        transition: opacity $transition;
+
+        &:hover,
+        &:focus,
+        &:active {
+            opacity: 0.7;
+        }
 
         @include media-query(medium) {
             margin-right: ($gutter * 1.5);
@@ -68,6 +75,14 @@
     }
 
     &__search-toggle {
+        transition: opacity $transition;
+
+        &:hover,
+        &:focus,
+        &:active {
+            opacity: 0.7;
+        }
+
         .app__navigation & {
             opacity: 0.4;
         }
