--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -27,6 +27,11 @@
             position: relative;
             padding-top: ($gutter * 2);
         }
+
+        // When inside pinned nav
+        .headroom--pinned.headroom--not-top .header__menus & {
+            padding-top: ($gutter / 2);
+        }
     }
 
     &__menu-toggle {
@@ -105,6 +110,10 @@
 
         @include media-query(large) {
             height: 900px;
+        }
+
+        .headroom--pinned.headroom--not-top & {
+            padding-top: ($gutter);
         }
 
         &--container {
