ensure header logo stays above the nav grid

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -108,6 +108,7 @@ $z-index: (
     free5: 60,
     nav-overlay: 70,
     nav: 80,
+    headerLogo: 85,
     gridlines: 90,
     cookie-message: 100,
     modal: 110,
