--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -44,4 +44,9 @@
             fill: $color--white;
         }
     }
+
+    .nav-open & {
+        @include z-index(headerLogo);
+        position: relative;
+    }
 }
