--- a/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
@@ -50,8 +50,8 @@
                     </div>
                 </div>
 
-                <div class="section__row grid feature-image">
-                    Image here
+                <div class="section__row feature-image">
+                    {% include "patterns/molecules/card/card.html" with item=eventModule %}
                 </div>
 
                 <div class="section__row">
