--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -1,15 +1,143 @@
 .card {
-    padding: 20px;
-    background-color: $color--tertiary;
-    transition: background-color $transition;
+    $root: &;
 
-    &:hover {
-        background-color: darken($color--tertiary, 10%);
+    &--image {
+
+        #{$root}__content {
+            position: relative;
+            top: -24px;
+
+            @include media-query(medium) {
+                top: -74px;
+            }
+
+            @include media-query(large) {
+                top: -95px;
+            }
+
+        }
     }
-}
 
-.card-with-image {
-    &:only-child {
-        max-width: 260px;
+    &__container {
+        @include grid-layout();
+    }
+
+    &__image-container {
+        grid-column: 1 / span 2;
+
+        @include media-query(large) {
+            grid-column: 2 / span 3;
+        }
+
+    }
+
+    &__image-container {
+        display: block;
+        transition: opacity $transition;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    &__image {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    &__content {
+        grid-row: 2;
+        grid-column: 1 / span 2;
+        padding-top: ($gutter / 2);
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+            padding-top: $gutter;
+        }
+
+        @include media-query(large) {
+            grid-column: 2 / span 2;
+        }
+
+    }
+
+    &__meta {
+        @include font-size(xxs);
+        color: $color--tertiary;
+        text-transform: uppercase;
+        margin-bottom: ($gutter / 4);
+    }
+
+    &__heading {
+        margin-bottom: ($gutter / 2);
+    }
+
+    &__heading-link {
+        @include underline-hover();
+        position: relative;
+    }
+
+    &__description {
+        color: $color--meta;
+    }
+
+    &__person {
+
+        @include media-query(large) {
+            display: flex;
+            grid-row: 2;
+            grid-column: 4 / span 1;
+            padding-top: $gutter;
+        }
+
+    }
+
+    &__person-image {
+
+        @include media-query(large) {
+            display: block;
+            flex-basis: 60px;
+            min-width: 60px;
+            max-width: 60px;
+            height: 60px;
+        }
+    }
+
+    &__person-info {
+        padding-left: ($gutter * 0.75);
+    }
+
+    &__person-meta {
+        @include font-size(xxs);
+        color: $color--meta;
+        margin-bottom: ($gutter / 4);
+    }
+
+    &__person-title {
+        @include font-size(xxs);
+    }
+
+    &__person-dept {
+        @include font-size(xxs);
+        color: $color--meta;
+    }
+
+    .bg--dark & {
+
+        #{$root}__content {
+            background-color: $color--black;
+            color: $color--white;
+        }
+
+    }
+
+    .bg--light & {
+
+        #{$root}__content {
+            background-color: $color--white;
+            color: $color--black;
+        }
+
     }
 }
