Feature image component container

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -27,6 +27,7 @@
 @import 'components/card';
 @import 'components/carousel';
 @import 'components/facilities';
+@import 'components/feature-image';
 @import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
