--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -2,44 +2,70 @@
     <div class="key-details__header">
         <h3 class="heading heading--five key-details__heading">Key details</h3>
     </div>
-    <div class="key-details__section key-details__section--details">
-        <h4 class="body body--two key-details__sub-heading">Programme details</h4>
-        <ul class="key-details__list">
-            <li class="key-details__list-item">240 credits</li>
-            <li class="key-details__list-item">Full-time study</li>
-        </ul>
-    </div>
-    <div class="key-details__section key-details__section--open-days">
-        <h4 class="body body--two key-details__sub-heading">Next open days</h4>
-        <ul class="key-details__list">
-            <li class="key-details__list-item">25th June 2019</li>
-            <li class="key-details__list-item">
-                <a class="key-details__list-item-link link link--secondary link--link" href="#">
-                    <span class="link__label">Book or view all open days</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="key-details__section key-details__section--deadline">
-        <h4 class="body body--two key-details__sub-heading">Application deadline</h4>
-        <ul class="key-details__list">
-            <li class="key-details__list-item">14 June 2019</li>
-        </ul>
-    </div>
-    <div class="key-details__section key-details__section--career">
-        <h4 class="body body--two key-details__sub-heading">Career opportunities</h4>
-        <ul class="key-details__list">
-            <li class="key-details__list-item">Technical Architect</li>
-            <li class="key-details__list-item">Design Architect</li>
-            <li class="key-details__list-item">BIM Manager</li>
-            <li class="key-details__list-item">Project Manager</li>
-        </ul>
-    </div>
-    <div class="key-details__section key-details__section--action">
-        <a class="key-details__link link link--secondary link--download" href="#">
-            <span class="link__label">Download the full Archictecture MA programme specification</span>
-            <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
-        </a>
-    </div>
+    {% if page.programme_details_credits or page.programme_details_time or page.programme_details_duration %}
+        <div class="key-details__section key-details__section--details">
+            <h4 class="body body--two key-details__sub-heading">Programme details</h4>
+            <ul class="key-details__list">
+                {% if page.programme_details_credits and page.programme_details_credits_suffix %}
+                <li class="key-details__list-item">
+                    {{page.programme_details_credits}} {{page.get_programme_details_credits_suffix_display}}
+                </li>
+                {% endif %}
+                {% if page.programme_details_time and  page.programme_details_time_suffix %}
+                <li class="key-details__list-item">
+                    {{page.programme_details_time}} {{page.get_programme_details_time_suffix_display}}
+                </li>
+                {% endif %}
+                {% if page.programme_details_duration %}
+                <li class="key-details__list-item">
+                    {{page.get_programme_details_duration_display}}
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    {% endif %}
+    {% if page.next_open_day_date %}
+        <div class="key-details__section key-details__section--open-days">
+            <h4 class="body body--two key-details__sub-heading">Next open days</h4>
+            <ul class="key-details__list">
+                <li class="key-details__list-item">{{page.next_open_day_date}}</li>
+                <li class="key-details__list-item">
+                    <a class="key-details__list-item-link link link--secondary link--link" href="{{page.link_to_open_days}}">
+                        <span class="link__label">Book or view all open days</span>
+                        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    {% endif %}
+    {% if page.application_deadline %}
+        <div class="key-details__section key-details__section--deadline">
+            <h4 class="body body--two key-details__sub-heading">Application deadline</h4>
+            <ul class="key-details__list">
+                {% if page.application_deadline_options %}
+                    <li class="key-details__list-item">{{page.get_application_deadline_options_display}}</li>
+                {% else %}
+                    <li class="key-details__list-item">{{page.application_deadline}}</li>
+                {% endif %}
+            </ul>
+        </div>
+    {% endif %}
+    {% if page.career_opportunities.all %}
+        <div class="key-details__section key-details__section--career">
+            <h4 class="body body--two key-details__sub-heading">Career opportunities</h4>
+            <ul class="key-details__list">
+            {% for detail in page.career_opportunities.all %}
+                <li class="key-details__list-item">{{detail.text}}</li>
+            {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+    {% if page.programme_specification.url %}
+        <div class="key-details__section key-details__section--action">
+            <a class="key-details__link link link--secondary link--download" href="{{page.programme_specification.url}}">
+                <span class="link__label">Download the full {{page.title}} {{page.degree_level}} programme specification</span>
+                <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
+            </a>
+        </div>
+    {% endif %}
 </div>
