--- a/rca/project_styleguide/templates/patterns/molecules/card/card.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card.html
@@ -7,7 +7,7 @@
         <div class="card__content">
             <div class="card__meta">{{ item.meta }}</div>
             <h3 class="card__heading heading heading--five">
-                {% if item.link %}<a class="card__heading-link" href="{{ link }}">{% endif %}
+                {% if item.link %}<a href="{{ item.link }}" class="card__heading-link">{% endif %}
                     {{ item.title }}
                 {% if item.link %}</a>{% endif %}
             </h3>
