--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -1,20 +1,51 @@
 .card {
     $root: &;
+    $notch-height-small: 24px;
+    $notch-height-medium: 74px;
 
     &--image {
 
         #{$root}__content {
             position: relative;
-            top: -24px;
+            top: -$notch-height-small;
 
             @include media-query(medium) {
-                top: -74px;
+                top: -$notch-height-medium;
             }
 
             @include media-query(large) {
                 top: -95px;
             }
 
+            &::after {
+                @include z-index(base);
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '';
+                display: block;
+                height: $notch-height-small;
+                width: 100%;
+                transform: translate3d(-94px, 0, 0);
+
+                @include media-query(medium) {
+                    transform: translate3d(110px, 0, 0);
+                    height: $notch-height-medium;
+                }
+
+                @include media-query(large) {
+                    content: none;
+                }
+            }
+
+        }
+
+        // ensure card__content:after doens't hide content
+        #{$root}__meta,
+        #{$root}__heading,
+        #{$root}__description {
+            @include z-index(overlap);
+            position: relative;
         }
     }
 
@@ -49,15 +80,18 @@
     &__content {
         grid-row: 2;
         grid-column: 1 / span 2;
-        padding-top: ($gutter / 2);
+        padding-top: ($gutter * 0.75);
+        padding-right: ($gutter * 0.75);
 
         @include media-query(medium) {
             grid-column: 1 / span 1;
             padding-top: $gutter;
+            padding-right: 0;
         }
 
         @include media-query(large) {
             grid-column: 2 / span 2;
+            padding-right: $gutter;
         }
 
     }
@@ -76,6 +110,7 @@
     &__heading-link {
         @include underline-hover();
         position: relative;
+        color: inherit;
     }
 
     &__description {
@@ -125,18 +160,44 @@
 
     .bg--dark & {
 
-        #{$root}__content {
-            background-color: $color--black;
-            color: $color--white;
+        &#{$root}--image {
+
+            #{$root}__content {
+                color: $color--white;
+
+                @include media-query(medium) {
+                    background-color: $color--black;
+                }
+
+                &::after {
+                    background-color: $color--black;
+                }
+
+            }
+
         }
+
+
 
     }
 
     .bg--light & {
 
-        #{$root}__content {
-            background-color: $color--white;
-            color: $color--black;
+        &#{$root}--image {
+
+            #{$root}__content {
+                color: $color--black;
+
+                @include media-query(medium) {
+                    background-color: $color--white;
+                }
+
+                &::after {
+                    background-color: $color--white;
+                }
+
+            }
+
         }
 
     }
