--- a/rca/static_src/sass/layout/_footer.scss
+++ b/rca/static_src/sass/layout/_footer.scss
@@ -31,7 +31,7 @@
 
     &__logo {
         @include media-query(large) {
-            grid-column-start: 2;
+            grid-column: 2 / span 2;
         }
     }
 
