initial work on related content

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -45,6 +45,7 @@
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/programme-overview';
+@import 'components/related-content';
 @import 'components/responsive-object';
 @import 'components/rich-text';
 @import 'components/search';
