--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.html
@@ -1,45 +1,35 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-{% if related_documents or related_pages %}
-    <section class="grid">
-        {% if related_documents %}
-            {% for related_document in related_documents %}
-                {% with document=related_document.document %}
-                    <div class="card">
-                        <a href="{{ document.url }}">
-                            <h2>
-                                {% if related_document.title %}
-                                    {{ related_document.title }}
-                                    ({{ document.file_extension }})
-                                {% else %}
-                                    {{ document.filename }}
-                                {% endif %}
-                            </h2>
-                        </a>
-                    </div>
-                {% endwith %}
-            {% endfor %}
-        {% endif %}
+<div class="related-content">
+    <div class="section__row grid">
+        <h2 class="related-content__heading heading heading--two">{{title}}</h2>
+    </div>
 
-        {% if related_pages %}
-            {% for related in related_pages %}
-                {# a related object links to the original page (related.source_page) and a related one (related.page) #}
-                {% if related.page.live %}
-                    {% with specific_related_page=related.page.specific %}
-                        <a class="card" href="{% pageurl specific_related_page %}">
-                            {% if specific_related_page.listing_image %}
-                                {% image specific_related_page.listing_image fill-450x300 %}
-                            {% endif %}
-                            <h2>
-				{% firstof specific_related_page.listing_title specific_related_page.title %}
-                            </h2>
-                            {% if specific_related_page.listing_summary or specific_related_page.introduction %}
-                                <p>{% firstof specific_related_page.listing_summary specific_related_page.introduction %}</p>
-                            {% endif %}
-                        </a>
-                    {% endwith %}
-                {% endif %}
-            {% endfor %}
-        {% endif %}
-    </section>
-{% endif %}
+    {% if related_sections %}
+
+        {% for related_section in related_sections %}
+            <div class="related-content__group">
+                <div class="section__row grid">
+                    <h3 class="related-content__subheading heading heading--five">{{related_section.title}}</h3>
+                </div>
+
+                {% for related_item in related_items %}
+                    <div class="section-row grid">
+                        <div class="related-content__meta">
+                            <p class="related-content__title body body--one"><a href="#">{{related_item.title}}</a></p>
+                            <p class="related-content__degree">{{related_item.degree}}</p>
+                        </div>
+                        <p class="related-content__copy">{{related_item.copy}}</p>
+                        {% if forloop.first %}
+                            <div class="related-content__image-container">
+                                {% image specific_related_page.listing_image fill-300x270 %}
+                            </div>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor  %}
+    {% endif %}
+
+
+</div>
