--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -108,6 +108,10 @@
         overflow-y: scroll;
         overflow-x: hidden;
 
+        @include media-query(large) {
+            overflow: hidden;
+        }
+
         .nav-open & {
             pointer-events: all;
             transform: translate3d(0%, 0%, 0);
@@ -115,7 +119,6 @@
 
             @include media-query(large) {
                 background: transparent;
-                overflow: hidden;
             }
         }
     }
