--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -17,7 +17,7 @@
         height: 100%;
         display: none;
         max-height: 500px;
-        overflow: scroll;
+        overflow-y: scroll;
 
         &:hover,
         &.is-visible {
