--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -1,97 +1,23 @@
 .app {
-    &__grid-lines {
-        @include z-index(gridlines);
-        @include grid-layout();
+    $root: &;
+
+    &__header {
+        @include z-index(header);
         position: fixed;
+        width: 100%;
         top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        pointer-events: none;
+        transition: transform $transition;
 
-        > div {
-            position: relative;
-            display: none;
-            height: 100vh;
-            padding-right: 4.28%;
+        // Hide when scrolling down
+        .headroom--not-top & {
+            transform: translate3d(0, -100%, 0);
+        }
 
-            @include media-query(medium) {
-                padding-right: 1.85%;
-            }
-
-            // Show all for large
-            @include media-query(large) {
-                display: block;
-                padding-right: 1.81%;
-            }
-
-            &::before {
-                content: '';
-                position: absolute;
-                right: 0;
-                width: 1px;
-                height: 100%;
-                background-color: $color--grid-line-dark;
-                mix-blend-mode: multiply;
-            }
-
-            &::after {
-                content: '';
-                position: absolute;
-                right: 0;
-                width: 1px;
-                height: 100%;
-                background-color: $color--grid-line-light;
-                mix-blend-mode: screen;
-            }
-
-            // Only show first and last until large breakpoint
-            &:last-child,
-            &:first-child {
-                display: block;
-            }
-
-            // First item is only one to have a grid line on left side
-            &:first-child {
-                div {
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        left: 0;
-                        width: 1px;
-                        height: 100%;
-                        background-color: $color--grid-line-dark;
-                        mix-blend-mode: multiply;
-
-                        @include media-query(large) {
-                            content: none;
-                        }
-                    }
-
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        left: 0;
-                        width: 1px;
-                        height: 100%;
-                        background-color: $color--grid-line-light;
-                        mix-blend-mode: screen;
-
-                        @include media-query(large) {
-                            content: none;
-                        }
-                    }
-                }
-            }
-
-            &:last-child {
-                &::before,
-                &::after {
-                    @include media-query(large) {
-                        content: none;
-                    }
-                }
-            }
+        // Make visible and apply bg colour when pinned, but not at top
+        .headroom--pinned.headroom--not-top & {
+            // sass-lint:disable-line force-element-nesting
+            transform: translate3d(0, 0, 0);
+            background-color: $color--black;
         }
     }
 
