Removing max-width from key detail link

--- a/rca/static_src/sass/components/_key-details.scss
+++ b/rca/static_src/sass/components/_key-details.scss
@@ -98,6 +98,7 @@
     &__link {
         @include font-size(xxs);
         margin-right: $gutter;
+        max-width: 100% !important; // sass-lint:disable-line no-important
     }
 
     .bg--dark & {
