--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -30,7 +30,7 @@
             <ul class="key-details__list">
                 <li class="key-details__list-item">{{page.next_open_day_date}}</li>
                 <li class="key-details__list-item">
-                    <a class="key-details__list-item-link link link--secondary link--link" href="{{page.link_to_open_days}}">
+                    <a class="key-details__link link link--secondary link--link" href="{{page.link_to_open_days}}">
                         <span class="link__label">Book or view all open days</span>
                         <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
                     </a>
