--- a/rca/static_src/sass/components/_key-details.scss
+++ b/rca/static_src/sass/components/_key-details.scss
@@ -29,6 +29,9 @@
 
     // Only used for medium breakpoint rejigged layout
     &__section {
+        // increase antialiasing weight for legibility
+        -webkit-font-smoothing: subpixel-antialiased; // sass-lint:disable-line no-vendor-prefixes
+
         @include media-query(medium) {
             flex-basis: 50%;
         }
