Removing link from pathways

--- a/rca/project_styleguide/templates/patterns/molecules/pathways/pathways.html
+++ b/rca/project_styleguide/templates/patterns/molecules/pathways/pathways.html
@@ -6,4 +6,8 @@
             {% include "patterns/atoms/pathway-item/pathway-item.html" with path=path %}
         {% endfor %}
     </div>
+    <a class="pathways__view-all link link--primary link--link body body--two" href="#">
+        <span class="link__label">View all Pathway information</span>
+        <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
+    </a>
 </div>
