--- a/rca/project_styleguide/templates/patterns/atoms/pathway-item/pathway-item.html
+++ b/rca/project_styleguide/templates/patterns/atoms/pathway-item/pathway-item.html
@@ -1,6 +1,6 @@
 <div class="pathway-item">
     <h4 class="pathway-item__heading body body--one">
-        {{ path.title }}
+        <div class="pathway-item__heading-container">{{ path.title }}</div>
     </h4>
     <p class="pathway-item__description body body--two">{{ path.body }}</p>
 </div>
