--- a/rca/static_src/sass/components/_pathway-item.scss
+++ b/rca/static_src/sass/components/_pathway-item.scss
@@ -16,6 +16,10 @@
         }
     }
 
+    &__heading-container {
+        max-width: 170px;
+    }
+
     .bg--dark & {
         border-top: 1px solid $color--grid-line-light;
     }
