--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -39,18 +39,28 @@
     &__image-container {
         display: none;
         position: relative;
+        grid-column: 4 / span 1;
+        grid-row: 1 / span 3;
 
         @include media-query(large) {
             display: block;
         }
+    }
 
-        > img {
-            position: absolute;
+    &__image {
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: opacity $transition;
+
+        &.is-visible {
+            opacity: 1;
         }
     }
 
     &__title {
-        margin-bottom: 0;
+        margin-bottom: ($gutter / 4);
     }
 
     &__degree {
