--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -8,7 +8,11 @@
 
     &__heading,
     &__subheading {
-        grid-column: 2 / span 2;
+        grid-column: 1 / span 2;
+
+        @include media-query(large) {
+            grid-column: 2 / span 2;
+        }
     }
 
     &__heading {
@@ -19,21 +23,59 @@
         margin-bottom: $gutter;
     }
 
+    &__copy {
+        @include font-size(xxs);
+        grid-column: 1 / span 2;
+        padding-bottom: ($gutter / 0.75);
+
+        .bg--dark & {
+            border-bottom: 1px solid $color--grid-line-light;
+
+            @include media-query(medium) {
+                border-bottom: 0;
+            }
+        }
+
+        .bg--light & {
+            border-bottom: 1px solid $color--grid-line-dark;
+
+            @include media-query(medium) {
+                border-bottom: 0;
+            }
+        }
+
+        &:last-of-type {
+            border-bottom: 0;
+        }
+
+        @include media-query(medium) {
+            grid-column: auto;
+            border-bottom: 0;
+            padding-bottom: 0;
+        }
+    }
+
     &__meta {
-        grid-column: 2 / span 1;
+        @include media-query(large) {
+            grid-column: 2 / span 1;
+        }
     }
 
     &__copy,
     &__meta {
-        padding-top: $gutter;
+        @include media-query(medium) {
+            padding-top: $gutter;
+            padding-right: ($gutter / 2);
 
-        .bg--dark & {
-            border-top: 1px solid $color--grid-line-light;
+            .bg--dark & {
+                border-top: 1px solid $color--grid-line-light;
+            }
+
+            .bg--light & {
+                border-top: 1px solid $color--grid-line-dark;
+            }
         }
 
-        .bg--light & {
-            border-top: 1px solid $color--grid-line-dark;
-        }
     }
 
     &__image-container {
@@ -65,10 +107,7 @@
 
     &__degree {
         opacity: 0.4;
-    }
-
-    &__copy {
-        @include font-size(xxs);
+        margin-bottom: ($gutter / 4);
     }
 }
 
