News and card components

--- a/rca/project_styleguide/templates/patterns/molecules/card/card.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card.html
@@ -6,7 +6,7 @@
         {% if item.link %}</a>{% endif %}
         <div class="card__content">
             <div class="card__meta">{{ item.meta }}</div>
-            <h3 class="card__heading heading heading--five">
+            <h3 class="card__heading">
                 {% if item.link %}<a href="{{ item.link }}" class="card__heading-link">{% endif %}
                     {{ item.title }}
                 {% if item.link %}</a>{% endif %}
