--- a/rca/static_src/sass/components/_feature-image.scss
+++ b/rca/static_src/sass/components/_feature-image.scss
@@ -1,3 +1,9 @@
 .feature-image {
+    grid-column: 1 / span 2;
     margin-bottom: ($gutter * 3);
+
+    @include media-query(large) {
+        grid-column: 2 / span 3;
+    }
+
 }
