--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -40,6 +40,7 @@
 @import 'components/link';
 @import 'components/logo';
 @import 'components/nav';
+@import 'components/news';
 @import 'components/page';
 @import 'components/pathways';
 @import 'components/pathway-item';
