add correct degree font size

--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.html
@@ -28,9 +28,9 @@
                                     {{related_item.title}}
                                 </a>
                             </p>
-                            <p class="related-content__degree">{{related_item.degree}}</p>
+                            <p class="related-content__degree body body--two">{{related_item.degree}}</p>
                         </div>
-                        <p class="related-content__copy">{{related_item.copy}}</p>
+                        <p class="related-content__copy body body--two">{{related_item.copy}}</p>
                     {% endfor %}
 
                     {% for related_item in related_items %}
