--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -24,7 +24,6 @@
     }
 
     &__copy {
-        @include font-size(xxs);
         grid-column: 1 / span 2;
         padding-bottom: ($gutter / 0.75);
 
@@ -89,9 +88,8 @@
     }
 
     &__image {
-        background-size: cover;
-        width: 100%;
-        height: 100%;
+        max-height: 270px;
+        object-fit: cover;
         opacity: 0;
         transition: opacity $transition;
 
