Initial carousel setup

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -98,8 +98,8 @@
                     </ul>
                 </div>
 
-                <div class="section__row">
-                    Carousel module
+                <div class="section__row grid">
+                    {% include "patterns/organisms/carousel/carousel.html" %}
                 </div>
 
                 <div class="section__notch section__notch">
