--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -194,6 +194,7 @@
             #{$root}__image-container {
                 @include media-query(large) {
                     height: 100%;
+                    min-height: 100%;
                 }
             }
 
