adds contact us section

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -135,7 +135,7 @@
 
             <section class="section bg bg--light">
                 <div class="section__container">
-                    Contact us
+                    {% include "patterns/organisms/contact/contact.html" %}
                 </div>
             </section>
 
