--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -26,6 +26,7 @@
 @import 'components/cookie-message';
 @import 'components/card';
 @import 'components/carousel';
+@import 'components/contact';
 @import 'components/facilities';
 @import 'components/feature-image';
 @import 'components/footer-link-item';
