--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -28,6 +28,7 @@
 @import 'components/carousel';
 @import 'components/facilities';
 @import 'components/feature-image';
+@import 'components/featured-alumni';
 @import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
