--- a/rca/project_styleguide/templates/patterns/molecules/card/card.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card.html
@@ -1,26 +1,28 @@
 {% load wagtailcore_tags wagtailimages_tags %}
-<div class="card {% if item.image %}card--image{% endif %}">
+<div class="card {% if item.image %}card--image{% endif %} {% if item.person %}card--person{% endif %}">
     <div class="card__container">
         {% if item.link %}<a href="{{ item.link }}" class="card__image-container">{% endif %}
             {% if item.image %}{% image card.image fill-828x472 class="card__image" %}{% endif %}
         {% if item.link %}</a>{% endif %}
-        <div class="card__content">
-            <div class="card__meta">{{ item.meta }}</div>
-            <h3 class="card__heading">
-                {% if item.link %}<a href="{{ item.link }}" class="card__heading-link">{% endif %}
-                    {{ item.title }}
-                {% if item.link %}</a>{% endif %}
-            </h3>
-            <div class="card__description">{{ item.description }}</div>
-        </div>
-        {% if item.person %}
-            <div class="card__person">
-                {% image person.image fill-60x60 class="card__person-image" %}
-                <div class="card__person-info">
-                    <div class="card__person-meta">Featuring</div>
-                    <h4 class="card__person-title">{{ item.person.title }}</h4>
-                </div>
+        <div class="card__content-container">
+            <div class="card__content">
+                <div class="card__meta">{{ item.meta }}</div>
+                <h3 class="card__heading">
+                    {% if item.link %}<a href="{{ item.link }}" class="card__heading-link">{% endif %}
+                        {{ item.title }}
+                    {% if item.link %}</a>{% endif %}
+                </h3>
+                <div class="card__description">{{ item.description }}</div>
             </div>
-        {% endif %}
+            {% if item.person %}
+                <div class="card__person">
+                    {% image person.image fill-60x60 class="card__person-image" %}
+                    <div class="card__person-info">
+                        <div class="card__person-meta">Featuring</div>
+                        <h4 class="card__person-title">{{ item.person.title }}</h4>
+                    </div>
+                </div>
+            {% endif %}
+        </div>
     </div>
 </div>
