--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.html
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.html
@@ -8,7 +8,12 @@
             {% endfor %}
         </ul>
     </div>
-    <div class="carousel__controls grid">
+    <div class="carousel__controls">
+        <div class="carousel__bullets" data-glide-el="controls[nav]">
+            {% for slide in carousel %}
+                <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}"></button>
+            {% endfor %}
+        </div>
         <div class="carousel__controls-group" data-glide-el="controls">
             <button class="carousel__button carousel__button--prev button" aria-label="Previous" data-glide-dir="<">
                 <svg class="carousel__button-icon" width="46" height="46">
