--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.html
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.html
@@ -9,7 +9,7 @@
         </ul>
     </div>
     <div class="carousel__controls">
-        <div class="carousel__bullets" data-glide-el="controls[nav]">
+        <div class="carousel__bullet-container" data-glide-el="controls[nav]">
             {% for slide in carousel %}
                 <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}"></button>
             {% endfor %}
