--- a/rca/static_src/sass/components/_slideshow.scss
+++ b/rca/static_src/sass/components/_slideshow.scss
@@ -81,25 +81,35 @@
         }
     }
 
-    &__scrollbar {
-        position: relative;
-        height: 2px;
+    &__bullet-container {
         grid-column: 1 / span 2;
-        margin-top: $gutter;
-
-        @include media-query(medium) {
-            margin-top: ($gutter * 2);
-        }
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: stretch;
+        width: 100%;
+        pointer-events: none;
 
         @include media-query(large) {
             display: none;
         }
+
     }
 
-    &__scrollbar-progress {
-        position: absolute;
-        height: 100%;
-        background-color: $color--black; // overriden by theme
+    &__bullet {
+        flex-basis: auto;
+        flex: 1;
+        height: 2px;
+        border: 0;
+        padding: 0;
+        margin: 0;
+
+        &:hover,
+        &:active,
+        &:focus {
+            outline: 0;
+        }
+
     }
 
     .bg--dark & {
@@ -111,12 +121,12 @@
             }
         }
 
-        #{$root}__scrollbar {
+        #{$root}__bullet {
             background-color: $color--scrollbar-darkbg-bg;
-        }
 
-        #{$root}__scrollbar-progress {
-            background-color: $color--white;
+            &.glide__bullet--active {
+                background-color: $color--white;
+            }
         }
 
         #{$root}__button {
@@ -138,12 +148,12 @@
             }
         }
 
-        #{$root}__scrollbar {
+        #{$root}__bullet {
             background-color: $color--scrollbar-lightbg-bg;
-        }
 
-        #{$root}__scrollbar-progress {
-            background-color: $color--black;
+            &.glide__bullet--active {
+                background-color: $color--black;
+            }
         }
 
         #{$root}__button {
