--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -27,6 +27,7 @@
 @import 'components/card';
 @import 'components/carousel';
 @import 'components/contact';
+@import 'components/curriculum-intro';
 @import 'components/facilities';
 @import 'components/feature-image';
 @import 'components/featured-alumni';
@@ -59,7 +60,7 @@
 @import 'components/staff-detail';
 @import 'components/staff-overview';
 @import 'components/title-area';
-// @import 'components/video-modal';
+@import 'components/video-modal';
 
 // Layout
 @import 'layout/footer';
