--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -31,6 +31,8 @@
 
             <section class="section bg bg--dark">
 
+                {% include "patterns/organisms/curriculum-intro/curriculum-intro.html" %}
+
                 <div class="section__row programme-overview">
                     <header class="section__header grid">
                         <h3 class="section__heading section__heading--primary heading heading--two">We inspire design innovation</h3>
