programme body padding fix

--- a/rca/static_src/sass/components/_programme-overview.scss
+++ b/rca/static_src/sass/components/_programme-overview.scss
@@ -11,6 +11,7 @@
 
     &__body {
         grid-column: 1 / span 2;
+        padding-right: $gutter;
 
         @include media-query(large) {
             grid-column: 3 / span 2;
