Adding base files for tabs

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -57,6 +57,7 @@
 @import 'components/social-item';
 @import 'components/staff-detail';
 @import 'components/staff-overview';
+@import 'components/tabs';
 @import 'components/title-area';
 // @import 'components/video-modal';
 
