For now, comment this out as it's causing a recursion error

--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -19,6 +19,6 @@
     </div>
 </div>
 
-<div class="section__row grid">
+{% comment %} <div class="section__row grid">
     {% include "patterns/organisms/carousel/carousel.html" %}
-</div>
+</div> {% endcomment %}
