--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -38,6 +38,7 @@
 @import 'components/heading';
 @import 'components/hero';
 @import 'components/icon';
+@import 'components/image-caption-link';
 @import 'components/introduction';
 @import 'components/key-details';
 @import 'components/link';
