--- a/rca/project_styleguide/templates/patterns/molecules/video-modal/video-modal.html
+++ b/rca/project_styleguide/templates/patterns/molecules/video-modal/video-modal.html
@@ -1,7 +1,8 @@
 {% load wagtailcore_tags %}
-<h2>Simple video modal with no external library</h2>
-<div data-video-modal>
-    <a data-modal-open>Open video</a>
+<div {% if open_link %}data-video-modal{% endif %}>
+    {% if open_link %}
+        <a data-modal-open>Open video</a>
+    {% endif %}
     <div data-modal-window class="video-modal" aria-live="polite">
         <a data-modal-close class="video-modal__close">Close</a>
         <div class="video-modal__container">
