--- a/rca/project_styleguide/templates/patterns/organisms/curriculum-intro/curriculum-intro.html
+++ b/rca/project_styleguide/templates/patterns/organisms/curriculum-intro/curriculum-intro.html
@@ -4,7 +4,7 @@
         <h2 class="curriculum-intro__heading heading heading--two">{{heading}}</h2>
     </div>
     <div class="section__row grid">
-        {% include "patterns/molecules/video-modal/video-modal.html" %}
+        {% include "patterns/molecules/image-caption-link/image-caption-link.html" with modal=True %}
     </div>
     <div class="section__row grid">
         <h3 class="curriculum-intro__subheading heading heading--four">{{subheading}}</h3>
