--- a/rca/static_src/sass/components/_video-modal.scss
+++ b/rca/static_src/sass/components/_video-modal.scss
@@ -36,4 +36,15 @@
         top: 20px;
         right: 20px;
     }
+
+    &__close-icon {
+        fill: $color--secondary;
+        transition: opacity $transition;
+
+        &:hover,
+        &:active,
+        &:focus {
+            opacity: 0.8;
+        }
+    }
 }
