--- a/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.html
+++ b/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.html
@@ -3,6 +3,15 @@
 <div class="image-caption-link" {% if modal %}data-video-modal{% endif %}>
     <span {% if modal %}data-modal-open{% endif %} href="#" class="image-caption-link__link">
         {% image curriculum_intro.image fill-900x415 class="image-caption-link__image" %}
-        {% if modal %}{% include "patterns/molecules/video-modal/video-modal.html" with open_link=False %}{% endif %}
+        {% if modal %}
+            <svg width="24" height="24" class="image-caption-link__image-icon"><use xlink:href="#play-icon"></use></svg>
+            {% include "patterns/molecules/video-modal/video-modal.html" with open_link=False %}
+        {% endif %}
+        <div class="image-caption-link__caption-container">
+            <p class="image-caption-link__caption body body--two">
+                <svg width="24" height="24" class="image-caption-link__caption-icon"><use xlink:href="#play-icon"></use></svg>
+                <span class="image-caption-link__caption-text">{{caption}}</span>
+            </p>
+        </div>
     </span>
 </div>
